cli/tests/ui/program_when_invalid_source.stderr
Error: manifest::deserialize_error

  × check failed
  ╰─▶ json5 deserialize error at program.args[0]: invalid interpolation
      `foo.api.url`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/program_when_invalid_source.json5:7:15]
 6 │       {
 7 │         when: "foo.api.url",
   ·               ──────┬──────
   ·                     ╰── invalid interpolation `foo.api.url`
 8 │         argv: ["--api", "${slots.api.url}"],
   ╰────
